--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "sass": "^1.83.4"
   },
